Add InsufficientPermissionException for handling permission errors